[package]
name = "cardano_ouroboros_network"
description = "This crate implements the networking layer for the Ouroboros protocol used by Cardano blockchain."
license = "GPL-3.0 OR LGPL-3.0-only"
version = "0.2.4"
authors = [
  "Mark Stopka <mark.stopka@perlur.cloud>",
  "Pavel Šimerda <pavel.simerda@perlur.cloud>",
  "Andrew Westberg"
]
edition = "2018"
readme = "README.md"
repository = "https://github.com/2nd-Layer/rust-cardano-ouroboros-network/"
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b_simd = "0.5.11"
byteorder = "1.3.4"
chrono = "0.4.19"
hex = "0.4.2"
net2 = "0.2.35"
regex = "1.4.2"
reqwest = { version = "0.11.0", features = ["blocking"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.59"
log = "0.4.11"

[dev-dependencies]
simple_logger = "1.11.0"
futures = "0.3.8"
rusqlite = { version = "0.25.0", features = ["bundled"] }

[[example]]
name = "common"
crate-type = ["staticlib"]

[[example]]
name = "sqlite"
crate-type = ["staticlib"]

[[example]]
name = "pooltool"
crate-type = ["staticlib"]
