[package]
name = "cardano_ouroboros_network"
description = "This crate implements the networking layer for the Ouroboros protocol used by Cardano blockchain."
license = "MPL-2.0"
version = "0.3.0"
authors = [
  "Mark Stopka <mark.stopka@perlur.cloud>",
  "Pavel Šimerda <pavel.simerda@perlur.cloud>",
  "Andrew Westberg"
]
edition = "2021"
readme = "README.md"
repository = "https://github.com/2nd-Layer/rust-cardano-ouroboros-network/"
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
blake2b_simd = "1.0.0"
byteorder = "1.3.4"
chrono = "0.4.19"
hex = "0.4.2"
net2 = "0.2.35"
regex = "1.4.2"
reqwest = { version = "0.11.0", features = ["blocking"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.59"
log = "0.4.11"
tokio = { version = "1.15.0", features = ["full"]}

[dev-dependencies]
env_logger = "0.9.0"
futures = "0.3.8"
rusqlite = { version = "0.26.0", features = ["bundled"] }
oura = "1.1.0"
pallas = "0.4.0"
sled = "0.34.7"

[[example]]
name = "common"
crate-type = ["staticlib"]

[[example]]
name = "sqlite"
crate-type = ["staticlib"]

[[example]]
name = "pooltool"
crate-type = ["staticlib"]
